--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "next": "^14.2.5",
+    "postcss": "^8.4.41",
     "react": "^18",
     "react-dom": "^18",
+    "tailwindcss": "^3.4.10",
     "zustand": "^4.5.4"
   },
-  "devDependencies": {
+  "devDependenciesnp": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -22,5 +25,9 @@
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
+  },
+  "devDependencies": {
+    "@types/node": "22.3.0",
+    "typescript": "5.5.4"
   }
 }
